<resources>
    <string name="app_name">Zeal Math Olympiad</string>
    <string name="app_version">1.0 V (2017-2018)</string>

    <string name="sign_up">Sign Up for Zeal Math Olympiad</string>
    <string name="mobile_number">Enter your Mobile Number</string>
    <string name="sign_in">Sign In</string>
    <string name="password_txt">Enter your password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="title_activity_mobile_number">MobileNumberActivity</string>
    <string name="confirm">CONFIRM</string>
    <string name="registered_user">If Already have an account</string>
    <string name="title_activity_confirm_otp">ConfirmOTPActivity</string>
    <string name="confirm_otp">Enter OTP</string>
    <string name="confirm_msg">Enter your OTP</string>
    <string name="student_information">Student Information</string>
    <string name="send_btn">SEND</string>

    <string name="help_text">"I'm having trouble"</string>


    <string name="name">Enter your Name : </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Enter your E-Mail :</string>
    <string name="address">Enter your E-Mail :</string>
    <string name="marks">Enter your Marks :</string>
    <string name="ten">10th</string>
    <string name="twelve">12th</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="address_hint">Enter your address</string>
    <string name="interest">Your Interest : </string>
    <string name="street_name">Street Name</string>
    <string name="city_name">City Name</string>
    <string name="pin_code">Pin Code</string>

    <!-- Menus -->
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="study_menu">Study Material</string>
    <string name="videos">Videos</string>
    <string name="zeal_clg">About ZCOER</string>
    <string name="share">Share app</string>
    <string name="messages">"News &amp; Updates"</string>
    <string name="log_out_menu">Log Out</string>
    <string name="events_menu">Event at ZCOER</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="clg_description"> " Zeal Education Society was established in the year 1996. We made a humble beginning through Silver Crest School and Dyanganga College of Education (B.Ed and D.Ed) in the year 2006. In the following years we grew bigger and launched Zeal College of Engineering and Research (ZCOER) in 2007, Zeal Polytechnic in 2008 and Zeal Institute of Management and Computer Application (ZIMCA) in 2009. Just like the famous phrase ‘a rolling stone gathers no moss’, we are constantly evolving whether it be infrastructure, number of labs, faculty members or student intake.

We want to create the future of India by providing technical education to the masses. We believe in nurturing a student from his early years till their graduation and beyond. With this view we established several technical institutes give our students an opportunity to grow with us and become qualified. We have a variety of streams available under one umbrella of ZES. It also gives students the opportunity to become full blown flowers from a bud.

Shri S. M. Katkar
(Founder, Executive President,
Zeal Education Society Engineering and Educational Research (ZEAL’s), Pune , India.) " </string>

    <string name="welcome_txt">Welcome to ZEAL MATH OLYMPIAD 2017-18</string>

    <string name="text_title">Take Tastes</string>
    <string name="math_text">Math Tests</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_about">About</string>


    <string name="random_text">Fat new smallness few supposing suspicion two. Course sir people worthy horses add entire suffer. How one dull get busy dare far. At principle perfectly by sweetness do. As mr started arrival subject by believe. Strictly numerous outlived kindness whatever on we no on addition.</string>

    <!-- Math MCQs -->
    <string name="m_1"> "In Gaussian reduction procedure, row operations are performed to transform matrix A into..."</string>
    <string name="m_2">Method used to for two and three variable systems is the</string>
    <string name="m_3">Condition in Gaussian reduction procedure in which matrix A can be transformed into an identity matrix if matrix is</string>
    <string name="m_4">The system of equations 2x + 3y = 5 and 4x + 6y  = 10 has </string>
    <string name="m_5">If AB = 0  and BA ≠ 0 then necessarily</string>
    <string name="m_6">How many solution are there for x<sup>5</sup> + 4x = 1</string>
    <string name="m_7">The mean value theorem only tells you the derivative of one point, is it true</string>
    <string name="m_8">"If Rolle's theorem applies to every possible interval on a function,"</string>
    <string name="m_9">The rate at which  population of the city increases  is proportional to the number present at that instant. Within a period of 30 yrs, population grows from 40 lakhs to 80 lakhs.What will be the  population of the city after further period of 15 yrs?</string>
    <string name="m_10">If the particle moves in a straight line with velocity then the time required by the particle to travel a distance 99 meters is</string>
    <string name="m_11">"If 10 and percent; of radium disappears in 2 days how long will it take for 50 and percent; to be disappear "</string>
    <string name="m_12">The decomposition of radioactive material is calculated by the formula</string>
    <string name="m_13">If 30 and percent; of radium disappears in 10 days how long will it take for 90 and percent to be disappear</string>
    <string name="m_14">If the population of the city increases continuously then Diff. Eqn used to calculate the population is</string>
    <string name="m_15">The population of the city increases at a rate  proportional to the population  at that time. The population doubles in 50 yes.After 75 yrs the ratio of population P to the initial population P0 is</string>
    <string name="m_16">The area of the region bounded by the parabola (y-2)<sup>2</sup> =x-1,the tangent to the parabola at the point (2,3) and the x-axis is</string>
    <string name="m_17">A copper ball is heated to a temperature of 1000C .Then at time t=0 it is placed in water which is maintained at 300C,then the value of constant if integration is</string>
    <string name="m_18">The area between the curve y=e<sup>x</sup> from the ordinates x=0 and x=1 is</string>
    <string name="m_19">The area under the curve y=√(9-x)  and coordinate axis is</string>
    <string name="m_20">Area under the curve y= logx, the x-axis and the ordinates at x=1 to x=e is</string>


    <!-- Physics MCQs -->

    <string name="p2">M.I. of a thin uniform circular ring about the tangent to the plane of the ring is
 </string>
    <string name="p3"> </string>
    <string name="p4"> </string>
    <string name="p5"> </string>
    <string name="p6"> </string>
    <string name="p7"> </string>
    <string name="p8"> </string>


    <!-- chemistry  MCQs -->
    <string name="c1">The three dimensional graph of lattice points which sets the pattern for the whole lattice is called</string>
    <string name="c2">The edge of unit cell of fcc Xe crystal is 620 pm. The radius of Xe atom is
</string>
    <string name="c3">Diamonds are hard and</string>
    <string name="c4">The number of octahedral void(s) per atom present in a cubic close-packed structure is</string>
    <string name="c5">Giant ionic structures is also name given to
</string>
    <string name="c6">A metal crystallizes with a face-centered cubic lattice. The edge of the unit cell is 408 pm. The diameter of the metal atom is</string>
    <string name="c7">KCl crystallises in the same type of lattice as does NaCl Given that  and  Calculate the ratio fo the side of the uint cell for KCl to that of NaCl.</string>
    <string name="c8">Molarity of pure water is
</string>
    <string name="c9">"The freezing mixture used in ice cream machine consists of ice
and</string>
    <string name="c10">An aqueous solution of methanol in water has vapour pressure
</string>
    <string name="c11">Which of the following mixtures of liquids show negative deviation
</string>
    <string name="c12">The amount of the heat released when 20 ml 0.5 M NaOH is mixed with 100 ml 0.1 M HCl is x kJ. The heat of neutralization is
</string>
    <string name="c13">The amount of heat evolved when 500 cm3 of 0.1 M HCl is mixed with 200 cm3 of 0.2 M NaOH is ______.
</string>
    <string name="c14">Which of the following is an intensive property?
</string>
    <string name="c15">An increase in equivalent conductance of a strong electrolyte with dilution is mainly due to
</string>
    <string name="c16">"The Gibbs energy for the decomposition of Al2O3 at 500C is as follows:
</string>
    <string name="c17">The highest electrical conductivity of the following aqueous solutions is of
</string>
    <string name="c18">An electrolytic cell uses electrical energy to drive
</string>
    <string name="c19">Time required for 100 percent completion of a zero order reaction is
</string>
    <string name="c20">The energies of activation for forward and reverse reactions for A2 + B2   2AB are 180 kJ mol–1 and 200 kJ mol–1 respectively. The presence of a catalyst lowers the activation energy of both (forward and reverse) reactions by 100 kJ mol–1. The enthalpy change of the reaction (A2 + B2 → 2AB) in the presence of catalyst will be (in kJ mol–1):
</string>


    <string name="test_url">http://114.143.208.199/secomp/public/code/index.php</string>


</resources>
