<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prathameshmore.zealmatholympiad.StudentInfo">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/card_view">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30px"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/student_information"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_between_two_comp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName" />


                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="@string/mobile_number" />

                    <EditText
                        android:id="@+id/editTextMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mobile Number"
                        android:inputType="textEmailAddress" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="Enter your Address :" />

                    <EditText
                        android:id="@+id/editTextAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_hint"
                        android:inputType="textPostalAddress" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="@string/marks" />

                    <EditText
                        android:id="@+id/editTextMarks10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ten"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/editTextMarks12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/twelve"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="Interests" />

                    <EditText
                        android:id="@+id/editTextInterests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="e.g. Engineering/BSC/Medical/BSA etc"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/buttonSubmitInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70px"
                    android:layout_marginTop="@dimen/space_between_two_comp"
                    android:text="@string/btn_submit" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>


</RelativeLayout>
