<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prathameshmore.zealmatholympiad.AuthActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/card_view"
        app:cardCornerRadius="@dimen/corner_radius"
        android:background="@drawable/ripple_effect">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/corner_radius"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_effect"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/get_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_box_size"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        />

                    <Button
                        android:id="@+id/btn_confirm_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_box_size"
                        android:layout_marginTop="@dimen/space_between_two_comp"
                        android:text="@string/confirm" />


                    <TextView
                        android:id="@+id/help_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:text="@string/help_text"
                        android:textAlignment="center"
                        android:layout_marginBottom="10dp"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
